deployments/proxy/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - home.internal.example
      secretName: ha-tls
  rules:
    - host: home.internal.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
